fixed dish items scroll by value and overflow scroll instead of auto.Overflow: scroll will hide all overflowing content and cause scroll bars to appear on the element in question. If the content does not overflow, the scrollbars will still be visible, but disabled. overflow: auto is very similar, but the scrollbars only appear when the content is overflowing

--- a/src/components/DishItems/Dishitems.css
+++ b/src/components/DishItems/Dishitems.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 1.5rem;
   margin-top: 5px;
-  overflow-x: auto;
+  overflow-x: scroll;
   padding: 15px 0;
   -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on mobile */
 }
